--- a/index.html
+++ b/index.html
@@ -10,33 +10,29 @@
   <script src="https://kit.fontawesome.com/f7745dd027.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form action="" class="container">
+    <form class="container" method="post">
           <header>
               <img src="img/usuario2.png" alt="">
           </header>
           <main>
                 <i class="fa-solid fa-user"></i>
-                <input  id="input" class="ne" type="text" placeholder="NOME" name="tela">
+                <input  id="input" class="ne" type="text" placeholder="NOME" name="tela" required>
               <br>
 
-                <i class="fa-solid fa-envelope"></i>
-                <input id="input" class="ne" type="email" placeholder="E-MAIL" name="tela">
+              <i class="fa-solid fa-address-card"></i>
+                <input id="input" class="ne" type="text" placeholder="CPF" name="tela" minlength="11" maxlength="11" required>
               <br>
 
                 <i class="fa-solid fa-key"></i>
                 <input id="input" type="password" placeholder="SENHA" minlength="8" maxlength="8" title="Informe uma senha com 8 digitos" name="tela">
               <br>
-              <p class="op1">Esqueceu sua senha?</p>
-               
-              <input id="button" type="submit" value="LOGIN" name="tela">
-
-              <p class="op2">Faça seu cadastro</p>
+   
+              <input id="button" type="submit" value="LOGIN" name="tela" onclick="alert('Seus dados foram cadastrados!')">
           </main>
           <footer>
             <p>Criado por <a href="https://vitorlopes523.github.io/MaratonaExplore2/" target="_blank" title="Clique aqui">Vitor Lopes</a> para o treinamento de Programação Web</p>
           </footer>
 
     </form>
-  
 </body>
 </html>
